logs/gallery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BareNecessities-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/CommandTool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/Gallery-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/bn'...
Compiling './lib/python3.5/site-packages/bn/__init__.py'...
***   File "./lib/python3.5/site-packages/bn/__init__.py", line 170
    except error, err:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/commandtool'...
Compiling './lib/python3.5/site-packages/commandtool/__init__.py'...
***   File "./lib/python3.5/site-packages/commandtool/__init__.py", line 547
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/commandtool/recipes_267662.py'...
***   File "./lib/python3.5/site-packages/commandtool/recipes_267662.py", line 88
    print 'Without wrapping function\n'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gallery'...
Compiling './lib/python3.5/site-packages/gallery/__init__.py'...
***   File "./lib/python3.5/site-packages/gallery/__init__.py", line 967
    except getopt.GetoptError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gallery/plugin.py'...
***   File "./lib/python3.5/site-packages/gallery/plugin.py", line 495
    print filename, meta_path
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
